--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -780,7 +780,7 @@
      "output_type": "stream",
      "text": [
       "2022-07-20 21:48:52,891\tINFO tune.py:738 -- Total run time: 39.80 seconds (39.66 seconds for the tuning loop).\n",
-      "Map Progress (1 actors 1 pending):   0%|          | 0/1 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=39601)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
+      "Map Progress (1 actors 1 pending):   0%|          | 0/1 [00:01<?, ?it/s]\n",
       "Map Progress (1 actors 1 pending): 100%|██████████| 1/1 [00:03<00:00,  3.01s/it]\n",
       "Map_Batches: 100%|██████████| 1/1 [00:00<00:00,  8.70it/s]\n",
       "Map_Batches: 100%|██████████| 1/1 [00:00<00:00, 76.13it/s]\n",
@@ -906,7 +906,7 @@
      "output_type": "stream",
      "text": [
       "2022-07-20 21:50:36,835\tINFO tune.py:738 -- Total run time: 38.13 seconds (37.98 seconds for the tuning loop).\n",
-      "Map Progress (1 actors 1 pending):   0%|          | 0/2 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=39801)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
+      "Map Progress (1 actors 1 pending):   0%|          | 0/2 [00:01<?, ?it/s]\n",
       "Map Progress (2 actors 1 pending): 100%|██████████| 2/2 [00:03<00:00,  1.96s/it]\n",
       "Map_Batches: 100%|██████████| 2/2 [00:00<00:00,  5.28it/s]\n",
       "Map_Batches: 100%|██████████| 2/2 [00:00<00:00, 114.72it/s]\n",
@@ -1022,7 +1022,7 @@
      "output_type": "stream",
      "text": [
       "2022-07-20 21:52:25,471\tINFO tune.py:738 -- Total run time: 38.13 seconds (37.97 seconds for the tuning loop).\n",
-      "Map Progress (1 actors 1 pending):   0%|          | 0/3 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=40038)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
+      "Map Progress (1 actors 1 pending):   0%|          | 0/3 [00:01<?, ?it/s]\n",
       "Map Progress (2 actors 1 pending): 100%|██████████| 3/3 [00:04<00:00,  1.62s/it]\n",
       "Map_Batches: 100%|██████████| 3/3 [00:00<00:00,  7.77it/s]\n",
       "Map_Batches: 100%|██████████| 3/3 [00:00<00:00, 136.51it/s]\n",
@@ -1288,18 +1288,7 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "\u001b[2m\u001b[36m(TorchTrainer pid=40228)\u001b[0m 2022-07-20 21:53:47,328\tWARNING base_trainer.py:167 -- When passing `datasets` to a Trainer, it is recommended to reserve at least 20% of node CPUs for Dataset execution by setting `_max_cpu_fraction_per_node = 0.8` in the Trainer `scaling_config`. Not doing so can lead to resource contention or hangs. See https://docs.ray.io/en/master/data/key-concepts.html#example-datasets-in-tune for more info.\n",
-      "\u001b[2m\u001b[36m(_map_block_nosplit pid=40256)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
-      "\u001b[2m\u001b[36m(_map_block_nosplit pid=40256)\u001b[0m   img = torch.from_numpy(pic.transpose((2, 0, 1))).contiguous()\n",
-      "\u001b[2m\u001b[36m(_map_block_nosplit pid=40257)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
-      "\u001b[2m\u001b[36m(_map_block_nosplit pid=40257)\u001b[0m   img = torch.from_numpy(pic.transpose((2, 0, 1))).contiguous()\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m 2022-07-20 21:53:58,782\tINFO config.py:71 -- Setting up process group for: env:// [rank=0, world_size=1]\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m [W ProcessGroupGloo.cpp:715] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m 2022-07-20 21:53:59,042\tINFO train_loop_utils.py:298 -- Moving model to device: cpu\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m /Users/jiaodong/Workspace/ray/python/ray/air/_internal/torch_utils.py:64: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m   return torch.as_tensor(vals, dtype=dtype)\n"
-     ]
+     "text": []
     },
     {
      "name": "stdout",
@@ -1307,140 +1296,20 @@
      "text": [
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 2.305423, epoch: 0, iteration: 0\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 1.935424, epoch: 0, iteration: 500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 1.380047, epoch: 0, iteration: 1000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 1.376004, epoch: 0, iteration: 1500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 1.388083, epoch: 0, iteration: 2000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.863035, epoch: 0, iteration: 2500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 1.177578, epoch: 0, iteration: 3000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 1.235104, epoch: 0, iteration: 3500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.841955, epoch: 0, iteration: 4000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.943087, epoch: 0, iteration: 4500\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 1.174222, epoch: 0, iteration: 5000\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.776577, epoch: 0, iteration: 5500\n",
-      "Result for TorchTrainer_1923b_00000:\n",
-      "  _time_this_iter_s: 18.870364904403687\n",
-      "  _timestamp: 1658379257\n",
-      "  _training_iteration: 1\n",
-      "  date: 2022-07-20_21-54-17\n",
-      "  done: false\n",
-      "  experiment_id: d304983bfe3f4e269118f8618aa9b02f\n",
-      "  hostname: Jiaos-MacBook-Pro-16-inch-2019\n",
-      "  iterations_since_restore: 1\n",
-      "  loss: 6798.259970664978\n",
-      "  node_ip: 127.0.0.1\n",
-      "  pid: 40228\n",
-      "  should_checkpoint: true\n",
-      "  time_since_restore: 30.64481782913208\n",
-      "  time_this_iter_s: 30.64481782913208\n",
-      "  time_total_s: 30.64481782913208\n",
-      "  timestamp: 1658379257\n",
-      "  timesteps_since_restore: 0\n",
-      "  training_iteration: 1\n",
-      "  trial_id: 1923b_00000\n",
-      "  warmup_time: 0.004433870315551758\n",
-      "  \n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.674814, epoch: 1, iteration: 0\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.699747, epoch: 1, iteration: 500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.623052, epoch: 1, iteration: 1000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.896888, epoch: 1, iteration: 1500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.559495, epoch: 1, iteration: 2000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.346765, epoch: 1, iteration: 2500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.710671, epoch: 1, iteration: 3000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 1.046087, epoch: 1, iteration: 3500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.412118, epoch: 1, iteration: 4000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.568381, epoch: 1, iteration: 4500\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.795673, epoch: 1, iteration: 5000\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.651217, epoch: 1, iteration: 5500\n",
-      "Result for TorchTrainer_1923b_00000:\n",
-      "  _time_this_iter_s: 18.252465963363647\n",
-      "  _timestamp: 1658379276\n",
-      "  _training_iteration: 2\n",
-      "  date: 2022-07-20_21-54-36\n",
-      "  done: false\n",
-      "  experiment_id: d304983bfe3f4e269118f8618aa9b02f\n",
-      "  hostname: Jiaos-MacBook-Pro-16-inch-2019\n",
-      "  iterations_since_restore: 2\n",
-      "  loss: 3529.048624396324\n",
-      "  node_ip: 127.0.0.1\n",
-      "  pid: 40228\n",
-      "  should_checkpoint: true\n",
-      "  time_since_restore: 48.89374089241028\n",
-      "  time_this_iter_s: 18.2489230632782\n",
-      "  time_total_s: 48.89374089241028\n",
-      "  timestamp: 1658379276\n",
-      "  timesteps_since_restore: 0\n",
-      "  training_iteration: 2\n",
-      "  trial_id: 1923b_00000\n",
-      "  warmup_time: 0.004433870315551758\n",
-      "  \n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.743072, epoch: 2, iteration: 0\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.745054, epoch: 2, iteration: 500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.670639, epoch: 2, iteration: 1000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.742653, epoch: 2, iteration: 1500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.666471, epoch: 2, iteration: 2000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.223321, epoch: 2, iteration: 2500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.541566, epoch: 2, iteration: 3000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.854896, epoch: 2, iteration: 3500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.393249, epoch: 2, iteration: 4000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.392985, epoch: 2, iteration: 4500\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.639829, epoch: 2, iteration: 5000\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.682482, epoch: 2, iteration: 5500\n",
-      "Result for TorchTrainer_1923b_00000:\n",
-      "  _time_this_iter_s: 16.812592267990112\n",
-      "  _timestamp: 1658379292\n",
-      "  _training_iteration: 3\n",
-      "  date: 2022-07-20_21-54-53\n",
-      "  done: false\n",
-      "  experiment_id: d304983bfe3f4e269118f8618aa9b02f\n",
-      "  hostname: Jiaos-MacBook-Pro-16-inch-2019\n",
-      "  iterations_since_restore: 3\n",
-      "  loss: 2729.02725020051\n",
-      "  node_ip: 127.0.0.1\n",
-      "  pid: 40228\n",
-      "  should_checkpoint: true\n",
-      "  time_since_restore: 65.70409798622131\n",
-      "  time_this_iter_s: 16.810357093811035\n",
-      "  time_total_s: 65.70409798622131\n",
-      "  timestamp: 1658379293\n",
-      "  timesteps_since_restore: 0\n",
-      "  training_iteration: 3\n",
-      "  trial_id: 1923b_00000\n",
-      "  warmup_time: 0.004433870315551758\n",
-      "  \n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.553197, epoch: 3, iteration: 0\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.471037, epoch: 3, iteration: 500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.398391, epoch: 3, iteration: 1000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.544436, epoch: 3, iteration: 1500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.437728, epoch: 3, iteration: 2000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.129666, epoch: 3, iteration: 2500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.620640, epoch: 3, iteration: 3000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.930044, epoch: 3, iteration: 3500\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.365749, epoch: 3, iteration: 4000\n",
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.445916, epoch: 3, iteration: 4500\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.538055, epoch: 3, iteration: 5000\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=40276)\u001b[0m loss: 0.534079, epoch: 3, iteration: 5500\n",
-      "Result for TorchTrainer_1923b_00000:\n",
-      "  _time_this_iter_s: 17.023871898651123\n",
-      "  _timestamp: 1658379309\n",
-      "  _training_iteration: 4\n",
-      "  date: 2022-07-20_21-55-10\n",
-      "  done: false\n",
-      "  experiment_id: d304983bfe3f4e269118f8618aa9b02f\n",
-      "  hostname: Jiaos-MacBook-Pro-16-inch-2019\n",
-      "  iterations_since_restore: 4\n",
-      "  loss: 2328.8038033917546\n",
-      "  node_ip: 127.0.0.1\n",
-      "  pid: 40228\n",
-      "  should_checkpoint: true\n",
-      "  time_since_restore: 82.72845268249512\n",
-      "  time_this_iter_s: 17.024354696273804\n",
-      "  time_total_s: 82.72845268249512\n",
-      "  timestamp: 1658379310\n",
-      "  timesteps_since_restore: 0\n",
-      "  training_iteration: 4\n",
-      "  trial_id: 1923b_00000\n",
-      "  warmup_time: 0.004433870315551758\n",
-      "  \n",
       "Result for TorchTrainer_1923b_00000:\n",
       "  _time_this_iter_s: 17.023871898651123\n",
       "  _timestamp: 1658379309\n",
@@ -1517,14 +1386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map Progress (1 actors 1 pending):   0%|          | 0/3 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
-      "\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m   img = torch.from_numpy(pic.transpose((2, 0, 1))).contiguous()\n",
-      "\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/pandas/core/frame.py:3607: SettingWithCopyWarning: \n",
-      "\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m \n",
-      "\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m   self._set_item(key, value)\n",
+      "Map Progress (1 actors 1 pending):   0%|          | 0/3 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=40400)\n",
       "Map Progress (2 actors 1 pending): 100%|██████████| 3/3 [00:04<00:00,  1.62s/it]\n",
       "Map_Batches: 100%|██████████| 3/3 [00:00<00:00, 63.30it/s]\n",
       "Map_Batches: 100%|██████████| 3/3 [00:00<00:00, 129.65it/s]\n",
