--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -728,7 +728,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39562)\u001b[0m 2022-07-20 21:48:26,772\tINFO train_loop_utils.py:298 -- Moving model to device: cpu\n",
+      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39562)\u001b[0m 2022-07-20 21:48:26,772\tINFO train_loop_utils.py:298 -- Moving model to device: cpu\n"
      ]
     },
     {
@@ -780,7 +780,7 @@
      "output_type": "stream",
      "text": [
       "2022-07-20 21:48:52,891\tINFO tune.py:738 -- Total run time: 39.80 seconds (39.66 seconds for the tuning loop).\n",
-      "Map Progress (1 actors 1 pending):   0%|          | 0/1 [00:01<?, ?it/s]\n",
+      "Map Progress (1 actors 1 pending):   0%|          | 0/1 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=39601)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
       "Map Progress (1 actors 1 pending): 100%|██████████| 1/1 [00:03<00:00,  3.01s/it]\n",
       "Map_Batches: 100%|██████████| 1/1 [00:00<00:00,  8.70it/s]\n",
       "Map_Batches: 100%|██████████| 1/1 [00:00<00:00, 76.13it/s]\n",
@@ -841,7 +841,11 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "\u001b[2m\u001b[36m(TorchTrainer pid=39736)\u001b[0m 2022-07-20 21:50:01,936\tWARNING base_trainer.py:167 -- When passing `datasets` to a Trainer, it is recommended to reserve at least 20% of node CPUs for Dataset execution by setting `_max_cpu_fraction_per_node = 0.8` in the Trainer `scaling_config`. Not doing so can lead to resource contention or hangs. See https://docs.ray.io/en/master/data/key-concepts.html#example-datasets-in-tune for more info.\n",
+      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39752)\u001b[0m 2022-07-20 21:50:09,489\tINFO config.py:71 -- Setting up process group for: env:// [rank=0, world_size=1]\n",
+      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39752)\u001b[0m [W ProcessGroupGloo.cpp:715] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n"
+     ]
     },
     {
      "name": "stdout",
@@ -854,7 +858,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39752)\u001b[0m 2022-07-20 21:50:09,795\tINFO train_loop_utils.py:298 -- Moving model to device: cpu\n"
+      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39752)\u001b[0m 2022-07-20 21:50:09,795\tINFO train_loop_utils.py:298 -- Moving model to device: cpu\n",
+      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39752)\u001b[0m /Users/jiaodong/Workspace/ray/python/ray/air/_internal/torch_utils.py:64: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
+      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39752)\u001b[0m   return torch.as_tensor(vals, dtype=dtype)\n"
      ]
     },
     {
@@ -906,7 +912,7 @@
      "output_type": "stream",
      "text": [
       "2022-07-20 21:50:36,835\tINFO tune.py:738 -- Total run time: 38.13 seconds (37.98 seconds for the tuning loop).\n",
-      "Map Progress (1 actors 1 pending):   0%|          | 0/2 [00:01<?, ?it/s]\n",
+      "Map Progress (1 actors 1 pending):   0%|          | 0/2 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=39801)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
       "Map Progress (2 actors 1 pending): 100%|██████████| 2/2 [00:03<00:00,  1.96s/it]\n",
       "Map_Batches: 100%|██████████| 2/2 [00:00<00:00,  5.28it/s]\n",
       "Map_Batches: 100%|██████████| 2/2 [00:00<00:00, 114.72it/s]\n",
@@ -969,6 +975,7 @@
      "text": [
       "\u001b[2m\u001b[36m(TorchTrainer pid=39948)\u001b[0m 2022-07-20 21:51:50,596\tWARNING base_trainer.py:167 -- When passing `datasets` to a Trainer, it is recommended to reserve at least 20% of node CPUs for Dataset execution by setting `_max_cpu_fraction_per_node = 0.8` in the Trainer `scaling_config`. Not doing so can lead to resource contention or hangs. See https://docs.ray.io/en/master/data/key-concepts.html#example-datasets-in-tune for more info.\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39968)\u001b[0m 2022-07-20 21:51:58,118\tINFO config.py:71 -- Setting up process group for: env:// [rank=0, world_size=1]\n",
+      "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39968)\u001b[0m [W ProcessGroupGloo.cpp:715] Warning: Unable to resolve hostname to a (local) address. Using the loopback address as fallback. Manually set the network interface to bind to with GLOO_SOCKET_IFNAME. (function operator())\n",
       "\u001b[2m\u001b[36m(BaseWorkerMixin pid=39968)\u001b[0m 2022-07-20 21:51:58,367\tINFO train_loop_utils.py:298 -- Moving model to device: cpu\n"
      ]
     },
@@ -1022,7 +1029,7 @@
      "output_type": "stream",
      "text": [
       "2022-07-20 21:52:25,471\tINFO tune.py:738 -- Total run time: 38.13 seconds (37.97 seconds for the tuning loop).\n",
-      "Map Progress (1 actors 1 pending):   0%|          | 0/3 [00:01<?, ?it/s]\n",
+      "Map Progress (1 actors 1 pending):   0%|          | 0/3 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=40038)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
       "Map Progress (2 actors 1 pending): 100%|██████████| 3/3 [00:04<00:00,  1.62s/it]\n",
       "Map_Batches: 100%|██████████| 3/3 [00:00<00:00,  7.77it/s]\n",
       "Map_Batches: 100%|██████████| 3/3 [00:00<00:00, 136.51it/s]\n",
@@ -1288,7 +1295,9 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": []
+     "text": [
+      "\u001b[2m\u001b[36m(TorchTrainer pid=40228)\u001b[0m 2022-07-20 21:53:47,328\tWARNING base_trainer.py:167 -- When passing `datasets` to a Trainer, it is recommended to reserve at least 20% of node CPUs for Dataset execution by setting `_max_cpu_fraction_per_node = 0.8` in the Trainer `scaling_config`. Not doing so can lead to resource contention or hangs. See https://docs.ray.io/en/master/data/key-concepts.html#example-datasets-in-tune for more info.\n"
+     ]
     },
     {
      "name": "stdout",
@@ -1386,7 +1395,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map Progress (1 actors 1 pending):   0%|          | 0/3 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=40400)\n",
+      "Map Progress (1 actors 1 pending):   0%|          | 0/3 [00:01<?, ?it/s]\u001b[2m\u001b[36m(BlockWorker pid=40400)\u001b[0m /Users/jiaodong/anaconda3/envs/ray3.7/lib/python3.7/site-packages/torchvision/transforms/functional.py:150: UserWarning: The given NumPy array is not writable, and PyTorch does not support non-writable tensors. This means writing to this tensor will result in undefined behavior. You may want to copy the array to protect its data or make it writable before converting it to a tensor. This type of warning will be suppressed for the rest of this program. (Triggered internally at  /Users/runner/work/pytorch/pytorch/pytorch/torch/csrc/utils/tensor_numpy.cpp:178.)\n",
       "Map Progress (2 actors 1 pending): 100%|██████████| 3/3 [00:04<00:00,  1.62s/it]\n",
       "Map_Batches: 100%|██████████| 3/3 [00:00<00:00, 63.30it/s]\n",
       "Map_Batches: 100%|██████████| 3/3 [00:00<00:00, 129.65it/s]\n",
