[wip] [air/tune/docs] Change tune.run references to Tuner().fit
Signed-off-by: Kai Fricke <kai@anyscale.com>

--- a/doc/source/ray-air/examples/analyze_tuning_results.ipynb
+++ b/doc/source/ray-air/examples/analyze_tuning_results.ipynb
@@ -70,7 +70,7 @@
     "from sklearn.datasets import fetch_covtype\n",
     "\n",
     "import ray\n",
-    "from ray import tune\n",
+    "from ray import air, tune\n",
     "from ray.air import RunConfig, ScalingConfig\n",
     "from ray.train.xgboost import XGBoostTrainer\n",
     "from ray.tune.tune_config import TuneConfig\n",
