--- a/doc/source/ray-core/examples/dask_xgboost/dask_xgboost.ipynb
+++ b/doc/source/ray-core/examples/dask_xgboost/dask_xgboost.ipynb
@@ -61,7 +61,7 @@
     "from xgboost_ray import RayDMatrix, RayParams, train, predict\n",
     "\n",
     "import ray\n",
-    "from ray import tune\n",
+    "from ray import air, tune\n",
     "from ray.util.dask import ray_dask_get"
    ]
   },
