--- a/doc/source/tune/examples/tune-mlflow.ipynb
+++ b/doc/source/tune/examples/tune-mlflow.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "import mlflow\n",
     "\n",
-    "from ray import tune\n",
+    "from ray import air, tune\n",
     "from ray.air import session\n",
     "from ray.air.callbacks.mlflow import MLflowLoggerCallback\n",
     "from ray.tune.integration.mlflow import mlflow_mixin"
@@ -73,8 +73,8 @@
   },
   {
    "cell_type": "markdown",
+   "id": "618b6935",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -87,8 +87,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f449538e",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     },
@@ -115,8 +115,8 @@
   },
   {
    "cell_type": "markdown",
+   "id": "722e5d2f",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -129,8 +129,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8e0b9ab7",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     },
@@ -162,9 +162,8 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "e086f110",
+   "metadata": {},
    "source": [
     "To use the `mlflow_mixin` decorator, you can simply decorate the objective function from earlier.\n",
     "Note that we also use `mlflow.log_metrics(...)` to log metrics to MLflow.\n",
@@ -174,8 +173,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "144b8f39",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     },
@@ -202,9 +201,8 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "dc480366",
+   "metadata": {},
    "source": [
     "With this new objective function ready, you can now create a Tune run with it as follows:"
    ]
@@ -212,8 +210,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4b9fe6be",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     },
@@ -245,9 +243,8 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "id": "915dfd30",
+   "metadata": {},
    "source": [
     "If you hapen to have an MLFlow tracking URI, you can set it below in the `mlflow_tracking_uri` variable and set\n",
     "`smoke_test=False`.\n",
@@ -257,8 +254,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "05d11774",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     },
@@ -330,9 +327,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "orphan": true
  },
