--- a/doc/source/tune/examples/tune-pytorch-cifar.ipynb
+++ b/doc/source/tune/examples/tune-pytorch-cifar.ipynb
@@ -73,7 +73,7 @@
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
     "import ray\n",
-    "from ray import tune\n",
+    "from ray import air, tune\n",
     "from ray.air import session\n",
     "from ray.air.checkpoint import Checkpoint\n",
     "from ray.tune.schedulers import ASHAScheduler"
@@ -499,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.7"
   },
   "orphan": true
  },
