--- a/doc/source/tune/examples/dragonfly_example.ipynb
+++ b/doc/source/tune/examples/dragonfly_example.ipynb
@@ -75,7 +75,7 @@
     "import time\n",
     "\n",
     "import ray\n",
-    "from ray import tune\n",
+    "from ray import air, tune\n",
     "from ray.air import session\n",
     "from ray.tune.search import ConcurrencyLimiter\n",
     "from ray.tune.search.dragonfly import DragonflySearch"
@@ -239,15 +239,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "analysis = tune.run(\n",
+    "tuner = tune.Tuner(\n",
     "    objective,\n",
-    "    metric=\"objective\",\n",
-    "    mode=\"max\",\n",
-    "    name=\"dragonfly_search\",\n",
-    "    search_alg=algo,\n",
-    "    num_samples=num_samples,\n",
-    "    config=search_space\n",
-    ")"
+    "    tune_config=tune.TuneConfig(\n",
+    "        metric=\"objective\",\n",
+    "        mode=\"max\",\n",
+    "        search_alg=algo,\n",
+    "        num_samples=num_samples,\n",
+    "    ),\n",
+    "    run_config=air.RunConfig(\n",
+    "        name=\"dragonfly_search\",\n",
+    "    ),\n",
+    "    param_space=search_space,\n",
+    ")\n",
+    "results = tuner.fit()"
    ]
   },
   {
@@ -266,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Best hyperparameters found: \", analysis.best_config)"
+    "print(\"Best hyperparameters found were: \", results.get_best_result().config)"
    ]
   },
   {
@@ -289,6 +294,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "orphan": true
  },
