--- a/doc/source/tune/examples/pbt_ppo_example.ipynb
+++ b/doc/source/tune/examples/pbt_ppo_example.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "import random\n",
     "\n",
-    "from ray import tune\n",
+    "from ray import air, tune\n",
     "from ray.tune.schedulers import PopulationBasedTraining\n",
     "\n",
     "if __name__ == \"__main__\":\n",
@@ -119,9 +119,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "orphan": true
  },
