--- a/doc/source/tune/examples/pbt_transformers.ipynb
+++ b/doc/source/tune/examples/pbt_transformers.ipynb
@@ -38,7 +38,7 @@
     "import os\n",
     "\n",
     "import ray\n",
-    "from ray import tune\n",
+    "from ray import air, tune\n",
     "from ray.tune import CLIReporter\n",
     "from ray.tune.examples.pbt_transformers.utils import (\n",
     "    download_data,\n",
@@ -221,6 +221,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b5639782",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "\"\"\"Utilities to load and cache data.\"\"\"\n",
@@ -269,20 +275,26 @@
     "                task_name, data_dir\n",
     "            )\n",
     "        )"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "orphan": true
  },
