--- a/doc/source/tune/examples/tune-pytorch-lightning.ipynb
+++ b/doc/source/tune/examples/tune-pytorch-lightning.ipynb
@@ -263,7 +263,7 @@
    "outputs": [],
    "source": [
     "from pytorch_lightning.loggers import TensorBoardLogger\n",
-    "from ray import tune\n",
+    "from ray import air, tune\n",
     "from ray.air import session\n",
     "from ray.tune import CLIReporter\n",
     "from ray.tune.schedulers import ASHAScheduler, PopulationBasedTraining\n",
@@ -794,8 +794,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eb9faf3e",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     },
@@ -813,8 +813,8 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ae0eea6",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -865,9 +865,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "orphan": true
  },
