--- a/doc/source/tune/examples/tune-serve-integration-mnist.ipynb
+++ b/doc/source/tune/examples/tune-serve-integration-mnist.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "Let's start with our dependencies. Most of these should be familiar\n",
     "if you worked with PyTorch before. The most notable import for Ray\n",
-    "is the ``from ray import tune, serve`` import statement - which\n",
+    "is the ``from ray import air, tune, serve`` import statement - which\n",
     "includes almost all the things we need from the Ray side."
    ]
   },
@@ -149,7 +149,7 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "import ray\n",
-    "from ray import tune, serve\n",
+    "from ray import air, tune, serve\n",
     "from ray.air import session\n",
     "from ray.air.checkpoint import Checkpoint\n",
     "from ray.serve.exceptions import RayServeException\n",
@@ -872,9 +872,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   },
   "orphan": true
  },
